--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.0.18",
     "antd": "^4.2.2",
+    "echarts": "^5.0.2",
+    "echarts-for-react": "^3.0.1",
     "lint-staged": "^10.0.7",
     "mockjs": "^1.1.0",
     "prettier": "^1.19.1",
